--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,13 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  transition: background,color .3s ease;
+  transition: background,color,filter .3s ease;
 }
 
 html,
 body {
   max-width: 100vw;
+  height: 100%;
   overflow-x: hidden;
 }
 
