--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  transition: background,color,filter .3s ease;
+  transition: background .3s ease,color .3s ease,filter .3s ease;
 }
 
 html,
