update page.js, style.css, src/components/Header/index.js and src/components/Theme/index.js

--- a/src/components/Effect/style.css
+++ b/src/components/Effect/style.css
@@ -24,6 +24,15 @@
 .header .EffectLightMode .dark {
     background: #000;
 }
+.main .EffectLightMode {
+    background: #fff !important;
+}
+.main .EffectLightMode .light {
+    background: #fff !important;
+}
+.main .EffectLightMode .dark {
+    background: #000;
+}
 @keyframes effectDark {
     to {
         transform: scale(150);
